--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-native-screens": "3.31.1",
     "react-native-tab-view": "^3.5.2",
     "react-native-web": "~0.19.10",
+    "unsplash-js": "^7.0.19",
     "uuid": "^10.0.0"
   },
   "devDependencies": {
